// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game> creates grid based on width and height 1`] = `
<div
  className="gridContainer"
>
  <div>
    <div
      className="header"
    >
      <div
        className="numMines"
      >
        0
      </div>
      <div
        className="status"
        onClick={[Function]}
      >
        ♞
      </div>
      <div
        className="timer"
      >
         
      </div>
    </div>
    <table
      className="grid"
    >
      <tbody>
        <tr
          className="row"
        >
          <Cell
            checked={false}
            marked={false}
            mine={false}
            onCheck={[Function]}
            onMark={[Function]}
            x={0}
            y={0}
          />
          <Cell
            checked={false}
            marked={false}
            mine={false}
            onCheck={[Function]}
            onMark={[Function]}
            x={1}
            y={0}
          />
        </tr>
        <tr
          className="row"
        >
          <Cell
            checked={false}
            marked={false}
            mine={false}
            onCheck={[Function]}
            onMark={[Function]}
            x={0}
            y={1}
          />
          <Cell
            checked={false}
            marked={false}
            mine={false}
            onCheck={[Function]}
            onMark={[Function]}
            x={1}
            y={1}
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> has completed class when game is won 1`] = `
<div
  className="gridContainer"
>
  <div>
    <div
      className="header"
    >
      <div
        className="numMines"
      >
        1
      </div>
      <div
        className="status"
        onClick={[Function]}
      >
        ✔
      </div>
      <div
        className="timer"
      >
         
      </div>
    </div>
    <table
      className="grid completed"
    >
      <tbody>
        <tr
          className="row"
        >
          <Cell
            checked={false}
            marked={false}
            mine={false}
            onCheck={[Function]}
            onMark={[Function]}
            x={0}
            y={0}
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> has header 1`] = `
<div
  className="gridContainer"
>
  <div>
    <div
      className="header"
    >
      <div
        className="numMines"
      >
        0
      </div>
      <div
        className="status"
        onClick={[Function]}
      >
        ✔
      </div>
      <div
        className="timer"
      >
         
      </div>
    </div>
    <table
      className="grid completed"
    >
      <tbody />
    </table>
  </div>
</div>
`;
